# carlbot-classifier

./: .gitignore  pyproject.toml
src/autolabel/: __main__.py
src/clean-chat-data/: __main__.py
src/split-data/: __main__.py
src/train/: __main__.py
